--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ pytest-testdox==3.1.0
 python-dotenv==1.0.1
 requests==2.32.3
 sniffio==1.3.1
+types-requests==2.32.0.20241016
 typing_extensions==4.12.2
 urllib3==2.3.0
 websockets==13.1
